@@ -27,7 +27,6 @@ import io.crate.data.Row;
 import io.crate.data.RowConsumer;
 import io.crate.execution.engine.collect.CrateCollector;
 
-import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
@@ -70,48 +69,4 @@ public class CompositeCollector implements CrateCollector {
         }
     }
 
-    static class MultiConsumer implements RowConsumer {
-
-        private final BatchIterator<Row>[] iterators;
-        private final RowConsumer consumer;
-        private final Function<BatchIterator<Row>[], BatchIterator<Row>> compositeBatchIteratorFactory;
-
-        private int remainingAccepts;
-        private Throwable lastFailure;
-
-        MultiConsumer(int numAccepts,
-                      RowConsumer consumer,
-                      Function<BatchIterator<Row>[], BatchIterator<Row>> compositeBatchIteratorFactory) {
-            this.remainingAccepts = numAccepts;
-            this.iterators = new BatchIterator[numAccepts];
-            this.consumer = consumer;
-            this.compositeBatchIteratorFactory = compositeBatchIteratorFactory;
-        }
-
-        @Override
-        public void accept(BatchIterator<Row> iterator, @Nullable Throwable failure) {
-            int remaining;
-            synchronized (iterators) {
-                remainingAccepts--;
-                remaining = remainingAccepts;
-                if (failure != null) {
-                    lastFailure = failure;
-                }
-                iterators[remaining] = iterator;
-            }
-            if (remaining == 0) {
-                // null checks to avoid using the factory with potential null-entries within the iterators
-                if (lastFailure == null) {
-                    consumer.accept(compositeBatchIteratorFactory.apply(iterators), null);
-                } else {
-                    consumer.accept(null, lastFailure);
-                }
-            }
-        }
-
-        @Override
-        public boolean requiresScroll() {
-            return consumer.requiresScroll();
-        }
-    }
 }
