@@ -20,3 +20,6 @@ Changes
 
 Fixes
 =====
+
+- Fixed an issue that caused ``COPY TO`` with filters on primary key columns to
+  fail.
